// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches shallow shapshot shapshot 1 1`] = `
<ChallengeCard
  challenge={
    Object {
      "allPhases": Array [
        Object {
          "phaseStatus": "Open",
          "phaseType": "Registration",
        },
      ],
      "currentPhases": Array [
        "Registration",
      ],
      "events": Array [
        Object {
          "eventName": "Submit",
        },
      ],
      "prize": Array [
        1200,
        600,
      ],
      "prizes": Array [
        1200,
        600,
      ],
      "status": "ACTIVE",
      "tags": Array [
        "Data Science",
      ],
      "technologies": Array [
        "Data Science",
      ],
      "totalPrize": 1800,
      "track": "Data Science",
      "type": "Challenge",
      "users": Object {},
    }
  }
  challengeType={
    Object {
      "abbreviation": "CH",
      "name": "Challenge",
    }
  }
  domRef={null}
  expandTag={null}
  expandedTags={Array []}
  newChallengeDetails={false}
  onTechTagClicked={[Function]}
  openChallengesInNewTabs={false}
  userId=""
/>
`;

exports[`Matches shallow shapshot shapshot 2 1`] = `
<ChallengeCard
  challenge={
    Object {
      "allPhases": Array [
        Object {
          "phaseStatus": "Open",
          "phaseType": "Submit",
        },
      ],
      "currentPhases": Array [
        "Registration",
      ],
      "events": Array [],
      "id": "1",
      "prizes": Array [
        1200,
        600,
      ],
      "tags": Array [
        "Go",
      ],
      "technologies": Array [
        "Go",
      ],
      "totalPrize": 1800,
      "track": "Data Science",
      "type": "Challenge",
      "users": Object {},
    }
  }
  challengeType={
    Object {
      "abbreviation": "CH",
      "name": "Challenge",
    }
  }
  domRef={null}
  expandTag={null}
  expandedTags={Array []}
  newChallengeDetails={false}
  onTechTagClicked={[Function]}
  openChallengesInNewTabs={false}
  userId=""
/>
`;

exports[`Matches shallow shapshot shapshot 3 1`] = `
<ChallengeCard
  challenge={
    Object {
      "allPhases": Array [
        Object {
          "phaseStatus": "Closed",
          "phaseType": "Registration",
        },
      ],
      "currentPhases": Array [
        "Registration",
      ],
      "events": Array [],
      "id": "long id",
      "prizes": Array [
        1200,
        600,
      ],
      "tags": Array [],
      "technologies": Array [],
      "totalPrize": 1800,
      "track": "Data Science",
      "type": "Challenge",
      "users": Object {},
    }
  }
  challengeType={
    Object {
      "abbreviation": "CH",
      "name": "Challenge",
    }
  }
  domRef={null}
  expandTag={null}
  expandedTags={Array []}
  newChallengeDetails={false}
  onTechTagClicked={[Function]}
  openChallengesInNewTabs={false}
  userId=""
/>
`;
